--- a/sqlalchemy-core.ipynb
+++ b/sqlalchemy-core.ipynb
@@ -29,8 +29,8 @@
     "\n",
     "from sqlalchemy import create_engine\n",
     "\n",
-    "engine = create_engine('sqlite:///cookies.db')\n",
-    "#engine2 = create_engine('sqlite:///:memory:')\n",
+    "#engine = create_engine('sqlite:///cookies.db')\n",
+    "engine = create_engine('sqlite:///:memory:')\n",
     "#engine3 = create_engine('postgresql+psycopg2://username:password@localhost:5432/mydb')\n",
     "#engine4 = create_engine('mysql+pymysql://cookiemonster:chocolatechip' \\\n",
     "        #'@mysql01.monster.internal/cookies', pool_recycle=3600) "
@@ -316,6 +316,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ordering"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -344,20 +351,464 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Built-In SQL Functions and Labels"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "136\n"
+     ]
+    }
+   ],
    "source": [
-    "# to be continue..."
+    "# Summing our cookies\n",
+    "from sqlalchemy.sql import func\n",
+    "\n",
+    "s = select([func.sum(cookies.c.quantity)]) \n",
+    "\n",
+    "rp = connection.execute(s) \n",
+    "\n",
+    "print(rp.scalar())\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['count_1']\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Counting our inventory records\n",
+    "from sqlalchemy.sql import func\n",
+    "\n",
+    "s = select([func.count(cookies.c.cookie_name)]) \n",
+    "\n",
+    "rp = connection.execute(s)\n",
+    "\n",
+    "record = rp.first()\n",
+    "\n",
+    "print(record.keys())\n",
+    "\n",
+    "print(record.count_1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['inventory_count']\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Renaming our count column\n",
+    "from sqlalchemy.sql import func\n",
+    "\n",
+    "s = select([func.count(cookies.c.cookie_name).label('inventory_count')])\n",
+    "rp = connection.execute(s)\n",
+    "record = rp.first()\n",
+    "print(record.keys())\n",
+    "print(record.inventory_count)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chocolate chip\n",
+      "oatmeal raisin\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using a ClauseElement between\n",
+    "from sqlalchemy.sql import func\n",
+    "\n",
+    "s = select([cookies]).where(cookies.c.unit_cost.between(0.5, 2))\n",
+    "for row in connection.execute(s):\n",
+    "    print(row.cookie_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conjunctions ( and, or, not )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "peanut butter\n"
+     ]
+    }
+   ],
+   "source": [
+    "# code\n",
+    "# Using the and() conjunction\n",
+    "# So if we wanted to get a list of cookies with a cost of less than an amount\n",
+    "# and above a certain quantity we could use the code shown bellow\n",
+    "from sqlalchemy import and_, or_, not_\n",
+    "s = select([cookies]).where(\n",
+    "    and_(cookies.c.quantity > 23, cookies.c.unit_cost < 0.40) )\n",
+    "for row in connection.execute(s):\n",
+    "    print(row.cookie_name)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Limiting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['chocolate chip', 'peanut butter']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Two smallest cookie inventories\n",
+    "s = select([cookies.c.cookie_name, cookies.c.quantity]) \n",
+    "s = s.order_by(cookies.c.quantity)\n",
+    "s = s.limit(2)\n",
+    "rp = connection.execute(s)\n",
+    "print([result.cookie_name for result in rp])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## UPDATE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# code\n",
+    "# Updating data\n",
+    "from sqlalchemy import update\n",
+    "u = update(cookies).where(cookies.c.cookie_name == \"chocolate chip\")\n",
+    "u = u.values(quantity=(cookies.c.quantity + 120))\n",
+    "result = connection.execute(u)\n",
+    "print(result.rowcount)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           cookie_id: 1\n",
+      "         cookie_name: chocolate chip\n",
+      "   cookie_recipe_url: http://some.aweso.me/cookie/recipe.html\n",
+      "          cookie_sku: CC01\n",
+      "            quantity: 132\n",
+      "           unit_cost: 0.50\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = select([cookies]).where(cookies.c.cookie_name == \"chocolate chip\")\n",
+    "result = connection.execute(s).first()\n",
+    "for key in result.keys():\n",
+    "    print('{:>20}: {}'.format(key, result[key]))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DELETE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# code\n",
+    "# Deleting data\n",
+    "from sqlalchemy import delete\n",
+    "u = delete(cookies).where(cookies.c.cookie_name == \"chocolate chip\")\n",
+    "result = connection.execute(u)\n",
+    "print(result.rowcount)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = select([cookies]).where(cookies.c.cookie_name == \"dark chocolate chip\")\n",
+    "result = connection.execute(s).fetchall()\n",
+    "print(len(result))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "============================\n"
+     ]
+    }
+   ],
+   "source": [
+    "# code\n",
+    "# Play with insert\n",
+    "print('============================')\n",
+    "customer_list = [ {\n",
+    "    'username': 'cookiemon',\n",
+    "    'email_address': 'mon@cookie.com', ''\n",
+    "    'phone': '111-111-1111',\n",
+    "    'password': 'password'\n",
+    "}, {\n",
+    "    'username': 'cakeeater',\n",
+    "    'email_address': 'cakeeater@cake.com',\n",
+    "    'phone': '222-222-2222',\n",
+    "    'password': 'password'\n",
+    "}, {\n",
+    "    'username': 'pieguy',\n",
+    "    'email_address': 'guy@pie.com',\n",
+    "    'phone': '333-333-3333',\n",
+    "    'password': 'password'\n",
+    "} ]\n",
+    "\n",
+    "ins = users.insert()\n",
+    "result = connection.execute(ins, customer_list)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "============================\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "from sqlalchemy import insert\n",
+    "print('============================')\n",
+    "ins = insert(orders).values(user_id=1, order_id=1)\n",
+    "result = connection.execute(ins)\n",
+    "ins = insert(line_items)\n",
+    "order_items = [\n",
+    "{\n",
+    "    'order_id': 1,\n",
+    "    'cookie_id': 1,\n",
+    "    'quantity': 2,\n",
+    "    'extended_cost': 1.00\n",
+    "}, {\n",
+    "    'order_id': 1,\n",
+    "    'cookie_id': 3,\n",
+    "    'quantity': 12,\n",
+    "    'extended_cost': 3.00,\n",
+    "} ]\n",
+    "result = connection.execute(ins, order_items)\n",
+    "\n",
+    "ins = insert(orders).values(user_id=2, order_id=2)\n",
+    "result = connection.execute(ins)\n",
+    "ins = insert(line_items)\n",
+    "order_items = [\n",
+    "{\n",
+    "    'order_id': 2,\n",
+    "    'cookie_id': 1,\n",
+    "    'quantity': 24,\n",
+    "    'extended_cost': 12.00\n",
+    "}, {\n",
+    "    'order_id': 2,\n",
+    "    'cookie_id': 4,\n",
+    "    'quantity': 6,\n",
+    "    'extended_cost': 6.00\n",
+    "} ]\n",
+    "result = connection.execute(ins, order_items)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## JOINS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 'cookiemon', '111-111-1111', 'oatmeal raisin', 12, Decimal('3.00'))\n"
+     ]
+    }
+   ],
+   "source": [
+    "###\n",
+    "# code\n",
+    "# Using join to select from multiple tables\n",
+    "columns = [orders.c.order_id, users.c.username, users.c.phone, cookies.c.cookie_name,\n",
+    "           line_items.c.quantity, line_items.c.extended_cost]\n",
+    "cookiemon_orders = select(columns)\n",
+    "\n",
+    "cookiemon_orders = cookiemon_orders.select_from(orders.join(users).join(\n",
+    "    line_items).join(cookies)).where(users.c.username == 'cookiemon')\n",
+    "\n",
+    "result = connection.execute(cookiemon_orders).fetchall()\n",
+    "\n",
+    "for row in result:\n",
+    "    print(row)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlalchemy.sql.selectable.Select at 0x10c32ed60; Select object>"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cookiemon_orders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('cakeeater', 1)\n",
+      "('cookiemon', 1)\n",
+      "('pieguy', 0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "###\n",
+    "# code\n",
+    "#Using outerjoin to select from multiple tables\n",
+    "\n",
+    "from sqlalchemy import func\n",
+    "\n",
+    "columns = [users.c.username, func.count(orders.c.order_id)]\n",
+    "all_orders = select(columns)\n",
+    "all_orders = all_orders.select_from(users.outerjoin(orders))\n",
+    "all_orders = all_orders.group_by(users.c.username)\n",
+    "result = connection.execute(all_orders).fetchall()\n",
+    "for row in result:\n",
+    "    print(row)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
